--- a/index.html
+++ b/index.html
@@ -3,4 +3,38 @@ layout: home
 author_profile: true
 ---
 
-<p>This text should appear above the recent posts.</p>
+<!-- مقدمة عامة تظهر في الجزء العلوي من الصفحة -->
+<p>Welcome to my personal website! I am Abdullah Badawod, a Network Security Specialist and a graduate of the Arab Open University. Here, you can find details about my certifications, projects, and courses I have completed.</p>
+
+<!-- قسم الشهادات الاحترافية -->
+<section>
+  <h2>Certifications</h2>
+  <ul>
+    <li><strong>Certified Ethical Hacker</strong> - EC-Council (2022)</li>
+    <li><strong>Certified Network Security Professional</strong> - Security Academy (2023)</li>
+  </ul>
+</section>
+
+<!-- قسم الدورات المجانية -->
+<section>
+  <h2>Free Courses</h2>
+  <ul>
+    <li><strong>Network Security Fundamentals</strong> - Coursera (2022)</li>
+    <li><strong>Introduction to Firewall Management</strong> - Udemy (2021)</li>
+  </ul>
+</section>
+
+<!-- قسم المشاريع -->
+<section>
+  <h2>My Projects</h2>
+  <ul>
+    <li><strong>Network Security Assessment Project</strong> - An in-depth project focusing on network penetration testing and security assessments.</li>
+    <li><strong>Firewall Configuration Using pfSense</strong> - A comprehensive guide to setting up a secure network firewall using pfSense.</li>
+  </ul>
+</section>
+
+<!-- قسم التعليم (University Details) -->
+<section>
+  <h2>Education</h2>
+  <p><strong>Graduate of the Arab Open University</strong> - Bachelor's Degree in Network Security (2022)</p>
+</section>
