--- a/_pages/collection-archive.html
+++ b/_pages/collection-archive.html
@@ -17,7 +17,15 @@ author_profile: true
   {% endunless %}
   {% for post in collection.docs %}
     {% unless collection.output == false or collection.label == "posts" %}
-      {% include archive-single.html %}
+      {% if collection.label == "Cybersecurity Projects" %}
+        <div class="project-summary">
+          <h3>{{ post.title }}</h3>
+          <p>{{ post.excerpt }}</p>
+          <a href="{{ post.url }}">Read More</a>
+        </div>
+      {% else %}
+        {% include archive-single.html %}
+      {% endif %}
     {% endunless %}
   {% endfor %}
 {% endfor %}
