--- a/_pages/post-archive-feature-rows.html
+++ b/_pages/post-archive-feature-rows.html
@@ -4,43 +4,50 @@ title: "Post Archive with Feature Rows"
 permalink: /post-archive-feature-rows/
 author_profile: true
 feature_row:
-  - image_path: assets/images/unsplash-gallery-image-1-th.jpg
-    alt: "placeholder image 1"
-    title: "Placeholder 1"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
-  - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
-    alt: "placeholder image 2"
-    title: "Placeholder 2"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
-    url: "#test-link"
-    btn_label: "Read More"
+  - image_path: /assets/images/firewall-setup.png
+    alt: "Firewall Setup"
+    title: "Firewall Configuration with pfSense"
+    excerpt: "A hands-on project demonstrating how to set up and secure a network using **pfSense**."
+    url: "/portfolio/firewall-setup/"
+    btn_label: "Learn More"
     btn_class: "btn--primary"
-  - image_path: /assets/images/unsplash-gallery-image-3-th.jpg
-    title: "Placeholder 3"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+  - image_path: /assets/images/penetration-testing.png
+    alt: "Penetration Testing"
+    title: "Penetration Testing Simulation"
+    excerpt: "Using **Kali Linux** and **Metasploit** to test the security of a virtual machine and discover vulnerabilities."
+    url: "/portfolio/penetration-testing/"
+    btn_label: "Learn More"
+    btn_class: "btn--primary"
+  - image_path: /assets/images/vulnerability-analysis.png
+    alt: "Vulnerability Analysis"
+    title: "Vulnerability Analysis: Log4Shell"
+    excerpt: "A detailed analysis of **Log4Shell** vulnerability, its exploitation, and mitigation strategies."
+    url: "/portfolio/vulnerability-analysis/"
+    btn_label: "Learn More"
+    btn_class: "btn--primary"
 feature_row2:
-  - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
-    alt: "placeholder image 2"
-    title: "Placeholder Image Left Aligned"
-    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Left aligned with `type="left"`'
-    url: "#test-link"
-    btn_label: "Read More"
+  - image_path: /assets/images/snort-setup.png
+    alt: "Snort IDS"
+    title: "Intrusion Detection with Snort"
+    excerpt: "Setting up **Snort** IDS/IPS on a Linux environment to detect network attacks."
+    url: "/portfolio/snort-setup/"
+    btn_label: "Learn More"
     btn_class: "btn--primary"
 feature_row3:
-  - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
-    alt: "placeholder image 2"
-    title: "Placeholder Image Right Aligned"
-    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Right aligned with `type="right"`'
-    url: "#test-link"
-    btn_label: "Read More"
+  - image_path: /assets/images/network-security.png
+    alt: "Network Security"
+    title: "Network Security for Small Business"
+    excerpt: "Securing a small business network using **pfSense** with a focus on VPN configuration and security best practices."
+    url: "/portfolio/network-security/"
+    btn_label: "Learn More"
     btn_class: "btn--primary"
 feature_row4:
-  - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
-    alt: "placeholder image 2"
-    title: "Placeholder Image Center Aligned"
-    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Centered with `type="center"`'
-    url: "#test-link"
-    btn_label: "Read More"
+  - image_path: /assets/images/ms900.png
+    alt: "MS-900"
+    title: "Microsoft Certified: MS-900"
+    excerpt: "Certification preparation for **Microsoft 365 Fundamentals**, focusing on cloud services and Microsoft products."
+    url: "/certifications/#ms-900"
+    btn_label: "Learn More"
     btn_class: "btn--primary"
 ---
 
