--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ author_profile: true
 ---
 
 <!-- مقدمة عامة تظهر في الجزء العلوي من الصفحة -->
-<p>Welcome to my personal website! I am Abdullah Badawod, a Network Security Specialist and a graduate of the Arab Open University. Here, you can find details about my certifications, projects, and courses I have completed.</p>
+<p>Welcome to my personal website! I am Abdullah Badawod, a **Network Security Specialist** and a graduate of the **Arab Open University**. Here, you can find details about my **certifications**, **projects**, and **courses** I have completed in the field of **network security**.</p>
 
 <!-- قسم الشهادات الاحترافية -->
 <section>
@@ -12,6 +12,7 @@ author_profile: true
   <ul>
     <li><strong>Certified Ethical Hacker</strong> - EC-Council (2022)</li>
     <li><strong>Certified Network Security Professional</strong> - Security Academy (2023)</li>
+    <li><strong>Certified Cisco Network Associate (CCNA)</strong> - Cisco (2024)</li> <!-- Added CCNA for completeness -->
   </ul>
 </section>
 
@@ -28,13 +29,26 @@ author_profile: true
 <section>
   <h2>My Projects</h2>
   <ul>
-    <li><strong>Network Security Assessment Project</strong> - An in-depth project focusing on network penetration testing and security assessments.</li>
-    <li><strong>Firewall Configuration Using pfSense</strong> - A comprehensive guide to setting up a secure network firewall using pfSense.</li>
+    <li><strong>Network Security Assessment Project</strong> - An in-depth project focusing on **network penetration testing** and **security assessments**.</li>
+    <li><strong>Firewall Configuration Using pfSense</strong> - A comprehensive guide to setting up a **secure network firewall** using **pfSense**.</li>
+    <li><strong>Intrusion Detection System Setup with Snort</strong> - Configuring **Snort** for real-time network threat detection.</li> <!-- Added project -->
   </ul>
 </section>
 
 <!-- قسم التعليم (University Details) -->
 <section>
   <h2>Education</h2>
-  <p><strong>Graduate of the Arab Open University</strong> - Bachelor's Degree in Network Security (2022)</p>
+  <p><strong>Graduate of the Arab Open University</strong> - Bachelor's Degree in **Network Security** (2022)</p>
 </section>
+
+<!-- قسم التواصل -->
+<section>
+  <h2>Contact</h2>
+  <p>You can reach me at:</p>
+  <ul>
+    <li>Email: <a href="mailto:a.badawod@outlook.sa">a.badawod@outlook.sa</a></li>
+    <li>Phone: +966 552115216</li>
+    <li>LinkedIn: <a href="https://www.linkedin.com/in/abdullah-badawod">Abdullah Badawod</a></li>
+  </ul>
+</section>
+
