--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,42 @@
+---
+title: "Portfolio"
+layout: collection
+permalink: /portfolio/
+collection: portfolio
+entries_layout: grid
+classes: wide
+---
 
+## My Network Security Projects
+
+Welcome to my **Portfolio**! Below are some of the projects I have worked on related to **network security**. These projects showcase my skills in penetration testing, firewall configuration, vulnerability analysis, and more.
+
+### 1. **Network Security Assessment Project**
+- **Description**: A comprehensive **network penetration testing** project where I assessed vulnerabilities in an enterprise network and suggested mitigations.
+- **Technologies Used**: **Kali Linux**, **Metasploit**, **Nmap**
+- **Link**: [View Project](#)
+
+### 2. **Firewall Configuration Using pfSense**
+- **Description**: Configured a **firewall** using **pfSense** to secure a corporate network. This project included creating security rules, VPN setup, and implementing intrusion detection.
+- **Technologies Used**: **pfSense**, **VPN**
+- **Link**: [View Project](#)
+
+### 3. **Penetration Testing Simulation with Kali Linux**
+- **Description**: Conducted a simulated **penetration test** using **Kali Linux** and **Metasploit** to identify and exploit vulnerabilities in a virtual machine.
+- **Technologies Used**: **Kali Linux**, **Metasploit**, **Wireshark**
+- **Link**: [View Project](#)
+
+### 4. **Snort IDS/IPS Setup for Intrusion Detection**
+- **Description**: Set up an **Intrusion Detection System (IDS)** using **Snort** to monitor network traffic for potential threats and generate alerts for unusual activity.
+- **Technologies Used**: **Snort**, **Linux**
+- **Link**: [View Project](#)
+
+### 5. **Ubuntu Hardening Guide**
+- **Description**: Documented a step-by-step guide to **hardening Ubuntu** for secure system administration, including configuring **SSH** settings and **firewalls**.
+- **Technologies Used**: **Ubuntu**, **SSH**, **ufw**
+- **Link**: [View Project](#)
+
+---
+
+### **Contact Me**
+If you're interested in any of the projects or would like to collaborate, feel free to reach out to me through my [Contact Page](#).
